Experimenting with compiling with the cilkview library.

--- a/hw3/Makefile
+++ b/hw3/Makefile
@@ -1,7 +1,7 @@
 # Makefile for Cilk Plus inner products.  See source code for details.
 
 CILKPP	= icc
-LIBARG	= -O2
+LIBARG	= -O2 -I/opt/cilkutil/include -L/opt/cilkutil/lib64
 TARGET	= innerproduct 
 SRC	= $(addsuffix .cpp,$(TARGET))
 
